# releng-docs-conf

./: .coafile  .editorconfig  .gitignore  .gitreview  .pre-commit-config.yaml  .prettierignore  .yamllint.yaml  MANIFEST.in  README  README.rst  REUSE.toml  conf.py  groups  project.config  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: build-test-release.yaml  build-test.yaml  gerrit-verify.yaml  github2gerrit.yaml  release-drafter.yaml  release.yaml
docs/: conf.py  conf.yaml  config.rst  index.rst  install-guide.rst  install.rst  requirements.txt
docs-conf/: __init__.py
docs-conf/defaults/: default.cfg
docs_conf/: __init__.py  conf.py
docs_conf/defaults/: default.cfg  default.yaml  lfdocs.yaml  onap.yaml  opendaylight.yaml  opnfv.cfg  opnfv.yaml  oran.yaml
examples/: conf.yaml
releasenotes/notes/: align-needs-sphinx-7e2a9c4b1d6f3085.yaml  blockdiag-to-mermaid-3f8c1d9a2b7e4056.yaml  conventional_commit-5cbbd021edc324c2.yaml  default-theme-sphinx-rtd-7e1c4a2b9d0f3856.yaml  modernise-packaging-pbr7-2d6f1a8c9b4e5073.yaml  remove-opnfv-profile-b4d2c9a1f8e35607.yaml  remove_constraints-3ac9b2003839ffef.yaml  sphinx-update-6b451b2462799591.yaml  update-onap-copyright-9debb4772e6d3339.yaml
relnotes/: v0.2.2.txt  v0.2.5.txt
tests/: conftest.py  test_simple.py
