[metadata]
name = lfdocs_conf
author = Linux Foundation Releng
author-email = releng@linuxfoundation.org
summary = Linux Foundation DocsConf
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://docs.releng.linuxfoundation.org/projects/lfdocs-conf
project_urls =
    Bug Tracker = https://jira.linuxfoundation.org
    Documentation = https://docs.releng.linuxfoundation.org/projects/lfdocs-conf
    Source Code = https://github.com/lfit/releng-docs-conf
license = EPL-1.0
python_requires = >=3.10
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Eclipse Public License 1.0 (EPL-1.0)
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages = docs_conf
package_data =
    docs_conf =
        defaults/*

[wheel]
universal = 1

[coverage:run]
# Scope coverage to the importable package so collection works for both
# editable and non-editable installs (coverage.py excludes site-packages
# by default, which a bare --cov target would otherwise measure as 0%).
source = docs_conf
# Pin the data file location (gitignored) so the transient .coverage file
# is predictable and cannot collide with filesystem-sensitive tests. CI
# or developers may override the location via the COVERAGE_FILE env var.
data_file = .coverage
